--- a/src/Components/Layout/MainContent.module.css
+++ b/src/Components/Layout/MainContent.module.css
@@ -1,5 +1,10 @@
-.test{
+/* *{
+    background-color: rgba(0, 0, 65, 0.856);
+} */
+
+.overall{
     scroll-behavior: smooth;
+    /* background-color: rgba(0, 0, 65, 0.856); */
 }
 
 
