--- a/src/Components/dropdown.module.css
+++ b/src/Components/dropdown.module.css
@@ -5,19 +5,23 @@
     padding: 0;
     width: 25px;
     float:right;
-    
+    /* display:none; */
+    cursor: pointer;
     /* right: 100%; */
     /* border: 0; */
     /* background-color: #fff; */
     /* color: #333; */
-    cursor: pointer;
     /* outline-color: red; */
+}
+
+@media (min-width: 960px) {
+    ul  { display: none; }
   }
 
 
 .drop
 {
-  position:absolute;
+  position:sticky;
   /* width: 300px; */
   left:88%;
   z-index: 2;
