--- a/src/Components/Layout/MainNavigation.module.css
+++ b/src/Components/Layout/MainNavigation.module.css
@@ -2,7 +2,10 @@
     width: 100%;
     height: 5rem;
     align-items: center;
-    background-image: linear-gradient(315deg, #020b14 0%, #2f3946 74%);
+    background-image: linear-gradient(180deg, #020b14 0%, #384a5e 100%);
+    /* position: sticky; */
+    position: relative;
+    display: block;
 }
 
 /* .dropped{
@@ -17,22 +20,26 @@
 
 .dropped ul
 {
-    width:100%;
+    /* width:100%; */
+    position: relative;
+    top:5%;
     float:right;
+    /* margin-top: 20px; */
 }
 
-.test{
-    position: sticky;
+.nav{
+    position: relative;
     align-items: baseline;
     display: flex;
     list-style:none;
     /* float:inline-start; */
     float:right;
+    top:20%;
     /* bottom:1.5vw;  */
     /* padding:0; */
 }
 @media (max-width: 990px) {
-    .test { display: none; }
+    .nav { display: none; }
   }
 
 .header li {
@@ -49,5 +56,5 @@
 .header a {
     text-decoration: none;
     font-size: 1.5rem;
-    color: #fcb8d2;
+    color: #6375af;
   }
