--- a/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
+++ b/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
@@ -5,3 +5,9 @@
     background-image: linear-gradient(0deg, #020b14 0%, #384a5e 100%);
     height:100vh;
 }
+
+.repoGrid {
+    margin-left: 25%;
+    margin-right: 25%;
+    width:50%;
+}
