--- a/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
+++ b/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
@@ -6,8 +6,21 @@
     height:100vh;
 }
 
-.repoGrid {
-    margin-left: 25%;
-    margin-right: 25%;
-    width:50%;
+/* .repoGrid {
+
+    background: peachpuff;
+    border: 4px solid brown;
+    height: 100px;
+    flex: 1; 
+} */
+
+.flexContainer {
+    display: flex;
 }
+
+.flexContainer div {
+    background: peachpuff;
+    border: 4px solid brown;
+    height: 100px;
+    flex: 1; 
+  }
