--- a/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
+++ b/src/client/Components/Layout/PortfolioSection/PortfolioSection.module.css
@@ -16,11 +16,81 @@
 
 .flexContainer {
     display: flex;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 3%;
+    height:200px;
 }
 
-.flexContainer div {
-    background: peachpuff;
-    border: 4px solid brown;
-    height: 100px;
-    flex: 1; 
-  }
+.flexContainer .insidePicture1 {
+    
+    display:none;
+}
+
+.flexContainer .insidePicture2 {
+    
+    display:none;
+}
+.flexContainer .repoGrid1, .flexContainer .repoGrid2 {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.flexContainer .repoGrid1:hover .insidePicture1
+{
+  position:absolute;
+  bottom:1;
+  left:1;
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  background: #1d1f21;
+  border-radius: 5px;
+  height:100%;
+  width:100%;
+  opacity:0.95;
+  transition: background-color 1s linear;
+
+}
+
+.flexContainer .repoGrid2:hover .insidePicture2
+{
+    position:absolute;
+    bottom:1;
+    left:1;
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+    background: #1d1f21;
+    border-radius: 5px;
+
+   opacity:0.95;
+}
+
+.flexContainer .repoGrid1 > img, .flexContainer.repoGrid2 > img 
+{
+    background:#f7fbff;
+    border-radius: 20px;
+    display:block;
+}
+
+.repoName {
+    position: absolute;
+    top:10%;
+    left:5%;
+    font-weight: bolder;
+}
+
+.repoDesc {
+    position: absolute;
+    top:30%;
+    left:5%;
+}
+
+img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
